--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.mule.extensions</groupId>
         <artifactId>mule-modules-parent</artifactId>
-        <version>1.1.2</version>
+        <version>1.1.5</version>
     </parent>
     <groupId>org.mule.connectors</groupId>
     <artifactId>mule-certified-parent</artifactId>
-    <version>1.2.5-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Mule Certified Parent POM</name>
     <properties>
@@ -64,8 +65,7 @@
         <connection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</connection>
         <developerConnection>scm:git:git@github.com:mulesoft/certified-mule-connector-parent.git</developerConnection>
         <url>https://github.com/mulesoft/certified-mule-connector-parent</url>
-      <tag>mule-certified-parent-1.2.3</tag>
-  </scm>
+    </scm>
     <repositories>
         <repository>
             <id>mule-releases</id>
